Wed Oct 16 15:44:24 2002  George Lebl <jirka@5z.com>

	* src/funclib.c: the constat functions take no arguments

Wed Oct 16 15:42:13 2002  George Lebl <jirka@5z.com>

	* lib/linear_algebra/*.gel: add some help strings, add DotProduct and
	  add the Gram-Schmidt process

Wed Oct 16 14:24:44 2002  George Lebl <jirka@5z.com>

	* src/funclib.[ch]: more cleanup, descriptions

	* src/plugin.[ch], src/calc.[ch]: move the genius_is_gui out
	  of the plugin crap

	* src/gnome-genius.c: fix outputing of info stuff.

	* src/funclib.c: print help directly to output

	* lib/*/*.gel: description fixes

Wed Oct 16 12:10:44 2002  George Lebl <jirka@5z.com>

	* src/calc.[ch], src/funclib.c, src/compil.[ch]: more advanced help
	  functionality, including categorizing

	* src/funclib.c: make the init function a bit nicer and start
	  categorizing and documenting the functions

	* lib/**/*.gel: adapt to the new SetHelp call, whack the conjugate
	  function as it already exists

	* src/*.c: random minor cleanup

Fri Oct 11 16:45:36 2002  George Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/geloutput.[ch], src/structs.h, src/calc.c:
	  fix output of large things

Fri Oct 11 15:22:29 2002  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: max_digits default to 12

	* src/funclib.c, src/mpwrap.[ch]: add random functions, and do
	  a bit of cleanup

Fri Oct 11 13:37:14 2002  George Lebl <jirka@5z.com>

	* src/calc.c, src/eval.c, src/parse.y, src/lexer.l,
	  src/parseutils.[ch], src/structs.h, compil.c: Add vararg functions

	* lib/linear_algebra/linear_algebra.gel: Add vector of matrices
	  direct sum function, and make the direct sum use varargs.
	  Also change is_invertible to IsInvertible and add
	  IsInvertibleField.  Also fix Jordan block function for n==1
	  and add some argument checking

	* lib/combinatorics/recursive_sequences.gel: use IsInvertible name

Fri Oct 11 12:02:19 2002  George Lebl <jirka@5z.com>

	* src/genius.c: fix a warning
