@@ -115,12 +115,23 @@ ceil(5/4)							2
 ceil(42.0)							42
 max(1,2)							2
 min(2,1)							1
+max(1,2,3)							3
+max(1,2,3,1)							3
+min(2,1,3)							1
+max(2)								2
+min(2)								2
+min([1,2,3,2])							1
+min([2,1;3,2])							1
+max([1,2,3,2])							3
+max([1,2;3,2])							3
 min(1.3,5/4)							1 1/4
 max(1.3,5/4)							1.3
 max(1.3,1.3)							1.3
 min(1.3,1.3)							1.3
 min(-1.3,1.3)							-1.3
 min(3i,5)							(min((0+3i),5))
+max([1,2,3],2)							[2,2,3]
+min([1,2,3],2)							[1,2,2]
 prod k=2 to 4 do k+1						60
 sum n=2 to 4 do n+1						12
 prod k in [2,3,4] do k+1					60
