@@ -1,3 +1,8 @@
+Wed Oct 16 16:54:03 2002  George Lebl <jirka@5z.com>
+
+	* src/funclib.c: min and max can take multiple arguments, if only one
+	  argument is supplied, get the min or max entry of a matrix
+
 Wed Oct 16 15:44:24 2002  George Lebl <jirka@5z.com>
 
 	* src/funclib.c: the constat functions take no arguments
